css/wrestlemania_main_event.css
@font-face {
    font-family : 'Wrestlemania';
    src         : url('/fonts/wrestlemania-webfont.eot');
    src         : url('/fonts/wrestlemania-webfont.eot?#iefix') format('embedded-opentype'), url('/fonts/wrestlemania-webfont.woff') format('woff'), url('/fonts/wrestlemania-webfont.ttf') format('truetype'), url('/fonts/wrestlemania-webfont.svg#webfont') format('svg');
}

html, body {
    font-family : 'Anton', sans-serif;
}

h2 {
    font-family : 'Wrestlemania';
    font-size   : 7em !important;
}

h3 {
    font-size : 4em !important;
}

footer {
    font-family : 'Anton', sans-serif;
}

.roman {
    letter-spacing : 2px;
}

.twitter_container {
    padding-top    : 1.5em;
    padding-bottom : 1.5em;
}

.carousel-control .icon-prev,
.carousel-control .icon-next {
    font-size: 6em;
}

/* Responsive Media Queries */
@media screen and (max-width : 1024px) {
    h2 {
        font-size : 5.5em !important;
    }

    h3 {
        font-size : 2.5em !important;
    }
    footer {
        font-size: 1em;
    }
    .carousel-control .icon-prev,
    .carousel-control .icon-next {
        font-size: 5em;
    }
}

@media screen and (max-width : 768px) {
    h2 {
        font-size : 4.5em !important;
    }

    h3 {
        font-size : 2em !important;
    }

    footer {
        font-size: 1.1em;
    }
    .carousel-control .icon-prev,
    .carousel-control .icon-next {
        font-size: 4em;
    }
}

@media screen and (max-width : 568px) {
    h2 {
        font-size : 3.5em !important;
    }

    h3 {
        font-size : 1.5em !important;
    }
    footer {
        font-size: 1.2em;
    }
    .carousel-control .icon-prev,
    .carousel-control .icon-next {
        font-size: 3em;
    }
}

@media screen and (max-width : 320px) {
    h2 {
        font-size : 2.5em !important;
    }

    h3 {
        font-size : 0.75em !important;
    }
    footer {
        font-size: 1.3em;
    }
    .tech_notes {
        float: left !important;
        margin-left: 0.1em;
    }
    .carousel-control.right {
        zoom: 100%;
    }
    .carousel-control .icon-prev,
    .carousel-control .icon-next {
        font-size: 2em;
    }
}

